    (eran at zend dot com, Laruence)

- mysqlnd
  . Fixed bug #55609 (mysqlnd cannot be built shared). (Johannes)
  . Fixed bug #55067 (MySQL doesn't support compression - wrong config option).
    (Andrey)

- PDO
  . Fixed bug #55776 (PDORow to session bug). (Johannes)

- PDO MySQL driver:
  . Fixed bug #54158 (MYSQLND+PDO MySQL requires #define MYSQL_OPT_LOCAL_INFILE)
  (Andrey)

- Phar:
  . Fixed bug#52013 (Unable to decompress files in a compressed phar). (Hannes)
  . Fixed bug#53872 (internal corruption of phar). (Hannes)

- Session:
  . Fixed bug #55267 (session_regenerate_id fails after header sent). (Hannes)

- NSAPI SAPI:
  . Don't set $_SERVER['HTTPS'] on unsecure connection (bug #55403). (Uwe
    Schindler)

- SimpleXML:
  . Reverted the SimpleXML->query() behaviour to returning empty arrays
    instead of false when no nodes are found as it was since 5.3.3 
    (bug #48601). (chregu, rrichards)
    
- String:
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some tab-separated 
    records). (Laruence)

23 Aug 2011, PHP 5.3.8

- Core:
  . Fixed bug #55439 (crypt() returns only the salt for MD5). (Stas)

- OpenSSL:
  . Reverted a change in timeout handling restoring PHP 5.3.6 behavior,
    as the new behavior caused mysqlnd SSL connections to hang (#55283).
    (Pierre, Andrey, Johannes)

18 Aug 2011, PHP 5.3.7
- Upgraded bundled SQLite to version 3.7.7.1. (Scott)
- Upgraded bundled PCRE to version 8.12. (Scott)

- Zend Engine:
  . Fixed bug #55156 (ReflectionClass::getDocComment() returns comment even
    though the class has none). (Felipe)
  . Fixed bug #55007 (compiler fail after previous fail). (Felipe)
  . Fixed bug #54910 (Crash when calling call_user_func with unknown function
    name). (Dmitry)
  . Fixed bug #54804 (__halt_compiler and imported namespaces).
    (Pierrick, Felipe)
  . Fixed bug #54624 (class_alias and type hint). (Felipe)
  . Fixed bug #54585 (track_errors causes segfault). (Dmitry)